<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:id="@+id/MainCL">

    <ImageView
        android:id="@+id/settingsWheel"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/settings_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_wheel" />

    <View
        android:id="@+id/rectangleTopMainMoney"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/rounded_corners_light_gray"
        android:elevation="5dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/moneyMain"
        app:layout_constraintEnd_toEndOf="@+id/moneyMain"
        app:layout_constraintStart_toStartOf="@+id/moneyMain"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moneyMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="6dp"
        android:text="@string/default_money_value"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/shoppingCartMain"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/shoppingCartMain"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/shopping_cart_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shoppingcart" />

    <View
        android:id="@+id/rectangleTopMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/rounded_corners_light_gray"
        android:elevation="5dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="@+id/pauseButtonMain"
        app:layout_constraintStart_toStartOf="@+id/startButtonMain"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <Button
        android:id="@+id/startButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/start_button"
        android:translationZ="5dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <Chronometer
    android:id="@+id/simpleChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:elevation="10dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <Button
        android:id="@+id/pauseButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/pause_button"
        android:translationZ="5dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <ImageView
        android:id="@+id/studyBuddy"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/studdy_buddy_image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/studybuddy1" />

    <View
        android:id="@+id/rectangleStudyBuddyName"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/rounded_corners_light_gray"
        android:elevation="5dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/studyBuddyName"
        app:layout_constraintEnd_toEndOf="@+id/studyBuddyName"
        app:layout_constraintStart_toStartOf="@+id/studyBuddyName"
        app:layout_constraintTop_toTopOf="@+id/studyBuddyName" />

    <TextView
        android:id="@+id/studyBuddyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="6dp"
        android:text="@string/studdy_buddy_default_name"
        app:layout_constraintEnd_toEndOf="@+id/studyBuddy"
        app:layout_constraintStart_toStartOf="@+id/studyBuddy"
        app:layout_constraintTop_toBottomOf="@+id/studyBuddy" />

    <Button
        android:id="@+id/backgroundsButtonMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_selector"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/backgrounds_button"
        android:translationZ="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/potsButtonMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_selector"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/pots_button"
        android:translationZ="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/statsButtonMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_selector"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/stats_button"
        android:translationZ="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33576643" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8508892" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

</androidx.constraintlayout.widget.ConstraintLayout>