<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/wallpaper"
    tools:context=".ShopBackgrounds">


    <View
        android:id="@+id/rectangleTopBackgroundsShop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/rounded_corners"
        android:elevation="5dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/titleBackgroundsShop"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moneyBackgroundsShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="6dp"
        android:text="@string/default_money_value"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleBackgroundsShop"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:layout_marginTop="28dp"
        android:elevation="6dp"
        android:text="@string/shop_backgrounds_titel"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/backgroundsBackRectangleShop"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corners_light_gray"
        android:elevation="5dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/titleBackgroundsShop" />

    <ImageView
        android:id="@+id/backgroundImageShop"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/background_image_description"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundsBackRectangleShop"
        app:layout_constraintStart_toStartOf="@+id/backgroundsBackRectangleShop"
        app:srcCompat="@drawable/wallpaper" />

    <Button
        android:id="@+id/buyBackgroundButton"
        android:layout_width="130dp"
        android:layout_height="44dp"
        android:background="@drawable/button_selector"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/buy_background_button"
        android:translationZ="5dp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundsBackRectangleShop"
        app:layout_constraintStart_toStartOf="@+id/backgroundsBackRectangleShop"
        app:layout_constraintTop_toBottomOf="@+id/backgroundsBackRectangleShop" />

    <View
        android:id="@+id/backgroundsBackRectangleShop2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corners_light_gray"
        android:elevation="5dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/titleBackgroundsShop" />

    <ImageView
        android:id="@+id/backgroundImageShop2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/background_image_description"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundsBackRectangleShop2"
        app:layout_constraintStart_toStartOf="@+id/backgroundsBackRectangleShop2"
        app:srcCompat="@drawable/wallpaper" />

    <Button
        android:id="@+id/buyBackgroundButton2"
        android:layout_width="130dp"
        android:layout_height="44dp"
        android:background="@drawable/button_selector"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/buy_background_button2"
        android:translationZ="5dp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundsBackRectangleShop2"
        app:layout_constraintStart_toStartOf="@+id/backgroundsBackRectangleShop2"
        app:layout_constraintTop_toBottomOf="@+id/backgroundsBackRectangleShop2" />

    <View
        android:id="@+id/backgroundsBackRectangleShop3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corners_light_gray"
        android:elevation="5dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/buyBackgroundButton" />

    <ImageView
        android:id="@+id/backgroundImageShop3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/background_image_description"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundsBackRectangleShop3"
        app:layout_constraintStart_toStartOf="@+id/backgroundsBackRectangleShop3"
        app:srcCompat="@drawable/wallpaper" />

    <Button
        android:id="@+id/buyBackgroundButton3"
        android:layout_width="130dp"
        android:layout_height="44dp"
        android:background="@drawable/button_selector"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/buy_background_button3"
        android:translationZ="5dp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundsBackRectangleShop3"
        app:layout_constraintStart_toStartOf="@+id/backgroundsBackRectangleShop3"
        app:layout_constraintTop_toBottomOf="@+id/backgroundsBackRectangleShop3" />

    <View
        android:id="@+id/backgroundsBackRectangleShop4"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corners_light_gray"
        android:elevation="5dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/buyBackgroundButton2" />

    <ImageView
        android:id="@+id/backgroundImageShop4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/background_image_description"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundsBackRectangleShop4"
        app:layout_constraintStart_toStartOf="@+id/backgroundsBackRectangleShop4"
        app:srcCompat="@drawable/wallpaper" />

    <Button
        android:id="@+id/buyBackgroundButton4"
        android:layout_width="130dp"
        android:layout_height="44dp"
        android:background="@drawable/button_selector"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/buy_background_button4"
        android:translationZ="5dp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundsBackRectangleShop4"
        app:layout_constraintStart_toStartOf="@+id/backgroundsBackRectangleShop4"
        app:layout_constraintTop_toBottomOf="@+id/backgroundsBackRectangleShop4" />

    <View
        android:id="@+id/backgroundsBackRectangleShop5"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corners_light_gray"
        android:elevation="5dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/buyBackgroundButton3" />

    <ImageView
        android:id="@+id/backgroundImageShop5"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/background_image_description"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundsBackRectangleShop5"
        app:layout_constraintStart_toStartOf="@+id/backgroundsBackRectangleShop5"
        app:srcCompat="@drawable/wallpaper" />

    <Button
        android:id="@+id/buyBackgroundButton5"
        android:layout_width="130dp"
        android:layout_height="44dp"
        android:background="@drawable/button_selector"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/buy_background_button5"
        android:translationZ="5dp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundsBackRectangleShop5"
        app:layout_constraintStart_toStartOf="@+id/backgroundsBackRectangleShop5"
        app:layout_constraintTop_toBottomOf="@+id/backgroundsBackRectangleShop5" />

    <View
        android:id="@+id/backgroundsBackRectangleShop6"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corners_light_gray"
        android:elevation="5dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/buyBackgroundButton4" />

    <ImageView
        android:id="@+id/backgroundImageShop6"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/background_image_description"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundsBackRectangleShop6"
        app:layout_constraintStart_toStartOf="@+id/backgroundsBackRectangleShop6"
        app:srcCompat="@drawable/wallpaper" />

    <Button
        android:id="@+id/buyBackgroundButton6"
        android:layout_width="130dp"
        android:layout_height="44dp"
        android:background="@drawable/button_selector"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/buy_background_button6"
        android:translationZ="5dp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundsBackRectangleShop6"
        app:layout_constraintStart_toStartOf="@+id/backgroundsBackRectangleShop6"
        app:layout_constraintTop_toBottomOf="@+id/backgroundsBackRectangleShop6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.58" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>